operator/pkg/gateway-api/testdata/gateway/httproute-invalid-backendref-missing-service-port/input/httproute-invalid-backendref-missing-service-port.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-backend-ref-missing-service-port
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /serviceimport
      backendRefs:
        - name: infra-backend-v1
